Time: 2 ms (99.32%) | Memory: 45.2 MB (37.23%) - LeetSync